changes made in index and CSS file

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
             setFormData({
                 name:'', email: '', comment: ''
             })
+
+            submitData()
         }
         function handleChange(e){
             //console.log(e.target);
@@ -39,13 +41,30 @@
             setFormData({...formData, [name]:value})
         }
         
-        function fetchData(){
+        async function fetchData(){
             try {
-                let res = axios.get('https://console.firebase.google.com/project/feedback-d3dc0/database/feedback-d3dc0-default-rtdb/data/~2F')
+                let res = await axios.get('https://console.firebase.google.com/project/feedback-d3dc0/database/feedback-d3dc0-default-rtdb/data/~2F')
                 console.log(res.data)
             } catch (error) {
                 alert(`Error fetching data: `, error)
             }
+        }
+        function submitData(){
+            axios.post('https://console.firebase.google.com/project/feedback-d3dc0/database/feedback-d3dc0-default-rtdb/data/~2F', {
+                name: formData.name,
+                email: formData.email,
+                comment: formData.comment
+            })
+            .then(function (response) {
+                console.log(response);
+            })
+            .catch(function (error) {
+                console.log(error);
+            });
+        }
+        function Delete(feedbackToDelete){
+            let newData = data.filter((feedback)=>feedback.name!==feedbackToDelete.name);
+            setData([...newData]);
         }
         return(
             <React.Fragment>
@@ -71,6 +90,14 @@
                 </form>  
             </div>
             <div>
+                <h2>Feedback List</h2>
+                <div>
+                    {data.map((feed, index)=>(
+                        <p key={index}>
+                            <li>{feed.comment}</li>
+                            By {feed.name}  {feed.email}    <button onClick={()=>Delete(feed)}>Delete</button></p>
+                    ))}
+                    </div>
                 <button onClick={fetchData}>click</button>
             </div>
             </React.Fragment>
